// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkExpand should call hideContent function when not collapsed and button is clicked 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link"
    data-testid="button"
    type="button"
  >
    Show More
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.887 15.905a1.496 1.496 0 010-2.008l6.397-5.948a1 1 0 011.358-.004l6.532 6.012a1.427 1.427 0 01-.138 1.948 1.572 1.572 0 01-1.997.103L11.96 11.37l-4.97 4.535a1.72 1.72 0 01-2.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkExpand should call showContent function when collapsed and button is clicked 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link"
    data-testid="button"
    type="button"
  >
    Show More
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 010 2.008l-6.397 5.948a1 1 0 01-1.358.003l-6.532-6.01a1.427 1.427 0 01.138-1.949 1.572 1.572 0 011.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 012.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkExpand should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link"
    data-testid="button"
    type="button"
  >
    Show More
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        style="width: 1rem; height: 1rem;"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 010 2.008l-6.397 5.948a1 1 0 01-1.358.003l-6.532-6.01a1.427 1.427 0 01.138-1.949 1.572 1.572 0 011.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 012.104 0z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;
